Fix vertical alignment of header text on about and leaderboard pages

--- a/src/client/src/components/Header.css
+++ b/src/client/src/components/Header.css
@@ -17,6 +17,7 @@
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     font-family: Arial; 
     text-align: Center;
+    align-items: center;
     display: flex;
     justify-content: space-between;
 }
